--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,7 +12,7 @@ services:
       - /app/node_modules
     environment:
       - NODE_ENV=development
-      - MONGODB_URI=mongodb://mongodb:27017/ticketing
+      - MONGODB_URI=mongodb://82.112.240.32:27017/ticketing
     command: sh -c "npm install && npm run dev"
     depends_on:
       - mongodb
